# AIR-Bench

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT  CONTRIBUTING.md  LICENSE  Makefile  README.md  avaliable_evaluation_results.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
AIR_Bench/: AIR_Bench.py  __init__.py  console.py
AIR_Bench/evaluation_utils/: __init__.py  data_loader.py  evaluation_arguments.py  evaluator.py  searcher.py
AIR_Bench/model_utils/: __init__.py  flag_dres_model.py  model_arguments.py
AIR_Bench/tasks/: __init__.py  long_doc_tasks.py  qa_tasks.py  tasks.py
air_benchmark/: __init__.py  air_benchmark.py
air_benchmark/evaluation_utils/: __init__.py  data_loader.py  evaluation_arguments.py  evaluator.py  searcher.py
air_benchmark/model_utils/: __init__.py  flag_dres_model.py  model_arguments.py  models.py
air_benchmark/tasks/: __init__.py  long_doc_tasks.py  qa_tasks.py  tasks.py
air_benchmark/tasks/v24_04/: long_doc_tasks.py  qa_tasks.py  tasks.py
air_benchmark/tasks/v24_05/: long_doc_tasks.py  qa_tasks.py  tasks.py
docs/: available_analysis_results.md  available_evaluation_results.md  available_tasks.md  avaliable_evaluation_results.md  avaliable_tasks.md  community_contribution.md  data_generation.md  submit_to_leaderboard.md
examples/: README.md  evaluate_jina_embeddings.py  evaluate_jina_embeddings_reranker.py  evaluate_jina_model.py  evaluate_openai_embedding.py  evaluate_sentence_transformers.py  evaluate_sentence_transformers_embeddings.py  evaluate_sentence_transformers_reranker.py  evaluate_transformers.py
examples/bm25/: evaluate_bm25.py
examples/bm25/utils/: arguments.py  searcher.py
examples/hf-transformers/: evaluate_hf_transformers.py
examples/hf-transformers/utils/: arguments.py  searcher.py
examples/sentence-transformers/: evaluate_sentence_transformers.py
examples/sentence-transformers/utils/: arguments.py  searcher.py
scripts/: README.md  eval_dev_results.py  run_AIR-Bench.py  run_air_bench.py  run_air_benchmark.py  usage.md  zip_results.py
scripts/bm25/: evaluate_bm25.py
scripts/bm25/utils/: arguments.py  models.py  searcher.py
scripts/hf-transformers/: evaluate_hf_transformers.py
scripts/hf-transformers/utils/: arguments.py  models.py  searcher.py  utils.py
scripts/sentence-transformers/: evaluate_sentence_transformers.py
scripts/sentence-transformers/utils/: arguments.py  models.py  searcher.py
tests/: test_load_data.py
tests/load_data/: test_load_data.py
tests/model_utils/: test_flag_dres_model.py
tests/tasks/: test_tasks.py
